force-app/src/objects/c2g__paymentDetailsTemplateFilter__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpjournal</customHelpPage>
    <description>Stores the filter&apos;s data in the payment details template.</description>
    <fields>
        <fullName>c2g__AccountsPayableControlGla__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The accounts payable general ledger account that relates to the payment details template filters.</description>
        <label>Accounts Payable GLA</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Payment Details Template Filters</relationshipLabel>
        <relationshipName>PaymentDetailsTemplateFilters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DetailsTemplate__c</fullName>
        <description>Field to specify a set of filters for payment details templates.</description>
        <label>Payment Details Template</label>
        <referenceTo>c2g__PaymentDetailsTemplate__c</referenceTo>
        <relationshipLabel>Payment Details Template Filters</relationshipLabel>
        <relationshipName>PaymentDetailsTemplateFilters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__Type__c</fullName>
        <description>Field for filtering a list of records for payment details templates.</description>
        <label>Filter Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vendor Name</fullName>
                </value>
                <value>
                    <fullName>Vendor Payment Method</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable Control GLA</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__VendorPaymentMethod__c</fullName>
        <description>The payment method to apply to this record for payment details templates.</description>
        <label>Vendor Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Electronic</fullName>
                </value>
                <value>
                    <fullName>Asperato - Domestic</fullName>
                </value>
                <value>
                    <fullName>Asperato - Domestic - ACH</fullName>
                </value>
                <value>
                    <fullName>Asperato - Domestic - BPAY</fullName>
                </value>
                <value>
                    <fullName>Asperato - Domestic - BANK_TRANSFER</fullName>
                </value>
                <value>
                    <fullName>Asperato - Domestic - FAST</fullName>
                </value>
                <value>
                    <fullName>Asperato - Domestic - FASTER_PAYMENTS</fullName>
                </value>
                <value>
                    <fullName>Asperato - Domestic - FEDWIRE</fullName>
                </value>
                <value>
                    <fullName>Asperato - Domestic - FPS</fullName>
                </value>
                <value>
                    <fullName>Asperato - Domestic - GIRO</fullName>
                </value>
                <value>
                    <fullName>Asperato - Domestic - RTGS</fullName>
                </value>
                <value>
                    <fullName>Asperato - International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account that relates to the payment details template filters.</description>
        <label>Vendor Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Details Template Filters</relationshipLabel>
        <relationshipName>PaymentDetailsTemplateFilters</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Payment Details Template Filter</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Payment Details Template Filter ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Details Template Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>